--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A backend microservies of devtinder",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app3.js"
   },
   "keywords": [
     "javascript",
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
+    "mongoose": "^8.8.3",
     "nodemon": "^3.1.7"
   }
 }
