--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A backend microservies of devtinder",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "nodemon src/app.js",
     "dev": "nodemon src/app3.js"
   },
   "keywords": [
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "nodemon": "^3.1.7",
     "validator": "^13.12.0"
