--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
-    "express": "^4.21.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "express-cross": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "nodemon": "^3.1.7",
