--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "nodemon": "^3.1.7",
+    "razorpay": "^2.9.6",
     "validator": "^13.12.0"
   }
 }
